<resources>
    <string name="app_name">智慧查询系统</string>
    <string name="baosun">报损查询</string>
    <string name="bs1">报损单号</string>
    <string name="bs10">报损人</string>
    <string name="bs9">报损时间</string>
    <string name="bs8">配送商</string>
    <string name="bs7">生产批号</string>
    <string name="bs6">品牌</string>
    <string name="bs5">规格型号</string>
    <string name="bs4">商品名称</string>
    <string name="bs3">通用名称</string>
    <string name="bs2">唯一码</string>
    <string name="query">查询</string>
    <string name="gohome">回首页</string>
    <string name="back">返回</string>
    <string name="bs12">生产厂家</string>
    <string name="zdlist">制度查询列表</string>
    <string name="zdquery">制度查询</string>
    <string name="kc1">通用名称</string>
    <string name="kc2">商品名称</string>
    <string name="kc3">规格型号</string>
    <string name="kc4">货号</string>
    <string name="kc5">品牌</string>
    <string name="kc6">一级库</string>
    <string name="kc7">二级库</string>
    <string name="kc8">生产厂家</string>
    <string name="kc9">配送商</string>
    <string name="kcquery">库存查询</string>
    <string name="kc11">单位</string>
    <string name="kc12">取出数量</string>
    <string name="kc13">在途数量</string>
    <string name="kc14">库存上限</string>
    <string name="kc15">库存下限</string>
    <string name="kc16">生产厂商</string>
    <string name="kc17">配送商</string>
    <string name="account">用户名</string>
    <string name="login">请登录</string>
    <string name="pwd">密码</string>
    <string name="loginbtn">登录</string>
    <string name="videolist">医疗视频</string>
    <string name="rkquery">入库查询</string>
    <string name="rk1">入库单号</string>
    <string name="rk2">唯一码</string>
    <string name="rk3">通用名称</string>
    <string name="rk4">商品名称</string>
    <string name="rk5">规格型号</string>
    <string name="rk6">品牌</string>
    <string name="rk7">生产批号</string>
    <string name="rk8">配送商</string>
    <string name="rk9">入库时间</string>
    <string name="rk10">入库人</string>
    <string name="thquery">退货查询</string>
    <string name="th1">退货单号</string>
    <string name="th2">唯一码</string>
    <string name="th3">通用名称</string>
    <string name="th4">商品名称</string>
    <string name="th5">规格型号</string>
    <string name="th6">品牌</string>
    <string name="th7">生产批号</string>
    <string name="th8">配送商</string>
    <string name="th9">退货时间</string>
    <string name="th10">退货人</string>
    <string name="thf1">退货单号</string>
    <string name="thf2">通用名称</string>
    <string name="thf3">商品名称</string>
    <string name="thf4">规格型号</string>
    <string name="thf5">生产批号</string>
    <string name="thf6">生产厂家</string>
    <string name="thf7">配送商</string>
    <string name="thf8">唯一码</string>
    <string name="thf9">退货时间</string>
    <string name="thf10">退货人</string>
    <string name="ckquery">出库查询</string>
    <string name="ck1">出库单号</string>
    <string name="ck2">唯一码</string>
    <string name="ck3">通用名称</string>
    <string name="ck4">商品名称</string>
    <string name="ck5">规格型号</string>
    <string name="ck6">品牌</string>
    <string name="ck7">生产批号</string>
    <string name="ck8">配送商</string>
    <string name="ck9">出库时间</string>
    <string name="ck10">出库人</string>
    <string name="ck1query">出库查询</string>
    <string name="ckf1">出库单号</string>
    <string name="ckf2">通用名称</string>
    <string name="ckf3">商品名称</string>
    <string name="ckf11">规格</string>
    <string name="ckf12">生产批号</string>
    <string name="ckf13">生产厂家</string>
    <string name="ckf14">配送商</string>
    <string name="ckf15">唯一码</string>
    <string name="ckf16">出库时间</string>
    <string name="ckf17">出库人</string>
    <string name="tkquery">退库查询</string>
    <string name="tk1">退库单号</string>
    <string name="tk2">唯一码</string>
    <string name="tk3">通用名称</string>
    <string name="tk4">商品名称</string>
    <string name="tk5">规格型号</string>
    <string name="tk6">品牌</string>
    <string name="tk7">生产批号</string>
    <string name="tk8">配送商</string>
    <string name="tk9">退库时间</string>
    <string name="tk10">退库人</string>
    <string name="tkf1">退库单号</string>
    <string name="tkf2">通用名称</string>
    <string name="tkf3">商品名称</string>
    <string name="tkf11">规格</string>
    <string name="tkf12">生产批号</string>
    <string name="tkf13">生产厂家</string>
    <string name="tkf14">配送商</string>
    <string name="tkf15">唯一码</string>
    <string name="tkf16">退库时间</string>
    <string name="tkf17">退库人</string>
    <string name="jfquery">计费查询</string>
    <string name="jf1">计费单号</string>
    <string name="jf2">患者住院号</string>
    <string name="jf3">患者姓名</string>
    <string name="jf4">使用科室</string>
    <string name="jf5">唯一码</string>
    <string name="jf6">通用名称</string>
    <string name="jf7">商品名称</string>
    <string name="jf8">规格型号</string>
    <string name="jf9">品牌</string>
    <string name="jf10">批号</string>
    <string name="jf11">计费时间</string>
    <string name="jf12">计费人</string>
    <string name="jf13">配送商</string>
    <string name="jff1">费单号</string>
    <string name="jff2">唯一码</string>
    <string name="jff3">患者就诊号</string>
    <string name="jff4">患者姓名</string>
    <string name="jff5">通用名称</string>
    <string name="jff6">商品名称</string>
    <string name="jff7">规格</string>
    <string name="jff8">生产批号</string>
    <string name="jff9">生产厂家</string>
    <string name="jff10">计费时间</string>
    <string name="jff11">成本科室</string>
    <string name="jff12">计费人</string>
    <string name="jff13">配送商</string>
    <string name="zsquery">追溯查询</string>
    <string name="zsleft">植入耗材</string>
    <string name="zsright">介入耗材</string>
    <string name="zs_wy">唯一码查询</string>
    <string name="zs_zc">主次码查询</string>
    <string name="bs5new">货号</string>
    <string name="bs9new">开始时间</string>
    <string name="bs10new">结束时间</string>
    <string name="bshh">货号</string>
    <string name="startdata">开始日期</string>
    <string name="enddata">结束日期</string>
    <string name="pinpai">品牌</string>
    <string name="ggxh">规格型号</string>
    <string name="scph">生产批号</string>
    <string name="pss">配送商</string>
    <string name="rksj">入库时间</string>
    <string name="rkr">入库人</string>
    <string name="jfdh">计费单号</string>
    <string name="hzzyh">患者住院号</string>
    <string name="hzxm">患者姓名</string>
    <string name="sykes">使用科室</string>
    <string name="jfsj">计费时间</string>
    <string name="zs_cm">次码</string>
    <string name="zzquery">资质查询</string>
    <string name="zz_code">医疗器械注册证号</string>
    <string name="zzdata1">生效日期</string>
    <string name="zzdata2">失效日期</string>
    <string name="zz_fj">附件</string>
    <string name="permission_camera">扫码需要用到拍摄权限</string>
    <string name="videosky">医学天地</string>
</resources>
