<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray4"
        android:divider="@color/gray3"
        android:showDividers="middle"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff1"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff2"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff3"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff4"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff5"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff6"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff7"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff8"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff9"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff10"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff11"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff12"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:gravity="center"
            android:text="@string/jff13"
            android:textSize="@dimen/sp_6"
            android:textColor="@color/gray5"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>